# Lyume

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
docs/: GLOSSARY.md
docs/reports/: 2026-03-26-hybrid-search-review.md  2026-03-26-step-b-memory-consolidation.md
docs/superpowers/checkpoints/: 2026-03-27-wizard-v2-checkpoint.md
docs/superpowers/plans/: 2026-03-25-intent-classifier.md  2026-03-25-memory-consolidation.md  2026-03-25-session-summary.md  2026-03-26-bugfix-batch.md  2026-03-26-elo-lessons.md  2026-03-26-generic-agent-pack.md  2026-03-26-hybrid-search.md  2026-03-26-wizard-and-wiring.md  (+2 more)
python/: bns.py  config.py  config.yaml.example  conversation_buffer.py  embedding_client.py  intent_classifier.py  lessons_seed.yaml  lessons_tui.py  llm_client.py  lyume_brain.py  lyume_status.py  memory_consolidator.py  memory_import.py  memory_manager.py  memory_proxy.py  memory_tui.py  save_memory.py  search_memory.py  seed_lesson.py  session_tracker.py
python/migrations/: 004_elo_rating.sql  005_emotional_memory.sql  init.sql
python/tests/: test_bns.py  test_config.py  test_conversation_buffer.py  test_elo_lessons.py  test_embedding_client.py  test_hybrid_search.py  test_integration.py  test_intent_classifier.py  test_llm_client.py  test_memory_consolidator.py  test_memory_import.py  test_session_tracker.py  test_wizard.py  test_wizard_openclaw.py
python/wizard/: __init__.py  __main__.py  backend_detect.py  engine.py  platform.py  port_utils.py  state.py  strings.py
(+17 files in other folders)
